data/derived/fa15/progs/unify/prog1935.ml.out
Characters 14-19:
  let _ = clone clone (-3);;
                ^^^^^
Error: This expression has type int -> int -> int
       but an expression was expected of type int
